group("jpeg") {
  public_deps = [ ":view_jpeg" ]
}

executable("view_jpeg") {
  sources = [
    "hardware_jpeg_decoder.cc",
    "hardware_jpeg_decoder.h",
    "jpeg_data.cc",
    "jpeg_data.h",
    "jpeg_decoder.h",
    "software_jpeg_decoder.cc",
    "software_jpeg_decoder.h",
    "view_jpeg.cc",
  ]
  deps = [ "//examples:dawn_sample_utils" ]
}
